@@ -170,6 +170,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #26039: Added zipfile.ZipInfo.from_file() and zipinfo.ZipInfo.is_dir().
+  Patch by Thomas Kluyver.
+
 - Issue #12923: Reset FancyURLopener's redirect counter even if there is an
   exception.  Based on patches by Brian Brazil and Daniel Rocco.
 
